syntax = "proto3";

package user;

option go_package = "/user";

service AuthUser {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc CheckToken (TokenRequest) returns (TokenReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message TokenRequest {
  string token = 1;
}

message TokenReply {
  string message = 1;
  bool status = 2;
}
